<resources>
    <string name="app_name">Fruit2you</string>
    <string name="welcome_to_our_shopping_platform">Welcome to Fruit2you</string>
    <string name="sign_up_to_our_shopping_platform">Sign up to our shopping platform</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_now">Sign Up!</string>
    <string name="sign_in">Sign in with</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="order">Order</string>
    <string name="profile">Profile</string>
    <string name="signinbtn">Sign In</string>
    <string name="password">Password</string>
    <string name="login_here">Login here</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="have_account">Already have an account?</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="design">header image</string>
    <string name="description">Show/hide password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="available_products">Available Products</string>
    <string name="orange_image">Orange Image</string>
    <string name="_500_00">500.00</string>
    <string name="orange">Oranges</string>
    <string name="buy_now">Add To Cart</string>
    <string name="pcs">10 &#8211; 20 pcs</string>
    <string name="mango_image">mango image</string>
    <string name="coconut_image">coconut image</string>
    <string name="strawberry_image">strawberry image</string>
    <string name="mango">Mangoes</string>
    <string name="_1_pack_1_5kg">1 pack 1.5kg</string>
    <string name="logout">Logout</string>
    <string name="strawberry">Strawberries</string>
    <string name="coconut">Coconuts</string>
    <string name="sizes">sizes</string>
    <string name="_1kg_n500">1kg-N500</string>
    <string name="delivery">Delivery</string>
    <string name="qty">Qty</string>
    <string name="enter_drop_off_location">Enter Delivery Address</string>
    <string name="fruit">Fruit</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="_0">0</string>
    <string name="ic_plus">ic_plus</string>
    <string name="quantity">Quantity</string>
    <string name="profile_picture">Profile picture</string>
    <string name="your_details">Your Details</string>
    <string name="change_password">Change Password</string>
    <string name="security_icon">security icon</string>
    <string name="reduce_image">reduce image</string>
    <string name="fruit_image">fruit image</string>
    <string name="checkout">Checkout</string>
    <string name="name">Name</string>
    <string name="amount_n">Amount</string>
    <string name="delete_icon">delete icon</string>
    <string name="add_icon">add icon</string>
    <string name="subtract_icon">subtract icon</string>
    <string name="n">₦</string>
    <string name="add_items_to_cart">Add Items To Cart</string>
    <string name="update_phone_number">Update Phone Number</string>
    <string name="update_name">Update Name</string>
    <string name="update">Update</string>
    <string name="email_address">Email Address</string>
    <string name="update_email_address">Update Email Address</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="current_password">Enter Current Password</string>
    <string name="current_password_title">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_password_to_confirm_update">Enter Password To Confirm Update</string>
    <string name="order_new_item">Place New Order</string>
    <string name="order_history">Order History</string>
    <string name="date">Date</string>
    <string name="payment_reference">Payment Reference</string>
    <string name="items">Items</string>
    <string name="orderref">Order Id:</string>
    <string name="delivery_icon">delivery icon</string>
    <string name="yellow_circle">yellow circle</string>
    <string name="doneicon">doneIcon</string>
</resources>
