<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:fontFamily="@font/poppins"
            android:text="@string/name"
            android:textColor="@android:color/primary_text_light_nodisable"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:text="@string/quantity"
            android:textColor="@android:color/primary_text_light_nodisable"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ivMinus"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:contentDescription="@string/delete_icon"
            android:focusable="true"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            app:srcCompat="@drawable/ic_delete2" />

        <ImageView
            android:id="@+id/ivPlus"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:contentDescription="@string/add_icon"
            android:focusable="true"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvQuantity"
            app:srcCompat="@drawable/ic_plus" />

        <ImageView
            android:id="@+id/ivMinus"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:contentDescription="@string/subtract_icon"
            android:focusable="true"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/ivPlus"
            app:layout_constraintTop_toBottomOf="@+id/tvQuantity"
            app:srcCompat="@drawable/ic_minus" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/amount_n"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/tvQuantity"
            app:layout_constraintStart_toEndOf="@+id/tvName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/naira"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n"
            android:fontFamily="@font/poppins"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/amount"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fruitImage"
            android:layout_width="118dp"
            android:layout_height="79dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/fruit_image"
            app:layout_constraintStart_toEndOf="@+id/ivDelete"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            app:srcCompat="@drawable/oranges" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>