<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    tools:context=".ui.FruitsActivity">


    <ImageView
        android:id="@+id/fruitImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bigorange" />

    <RelativeLayout
        android:layout_width="246dp"
        android:layout_height="261dp"
        android:layout_marginTop="16dp"
        android:background="#d3d3d3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fruitImage"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/fruitName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/fruit"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sizes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fruitName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/sizes"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/delivery" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sizes"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/_1kg_n500" />

        <TextView
            android:id="@+id/qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/weight"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/quantity" />

        <ImageView
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_plus"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/qty"
            android:layout_below="@id/weight"
            android:contentDescription="@string/ic_plus" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/weight"
            android:layout_toEndOf="@id/plus"/>

        <ImageView
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_minus"
            android:layout_marginStart="4dp"
            android:layout_below="@id/weight"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tvQuantity" />

      <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/plus"
            android:layout_marginStart="10dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/buy"
            android:minHeight="0dp"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            app:backgroundTint= "#44AD65" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>